--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,61 +1,73 @@
 [
     {
         "title": "Lorem ipsum dolor sit.",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, incidunt impedit placeat voluptates et quas ad laborum inventore odio sequi? A est modi laboriosam hic? Quo praesentium laborum odit harum!"
     },
     {
         "title": "Placeat ipsa enim autem.",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Ea minus non error? Quo sint eius eligendi eveniet nostrum iusto assumenda quod ducimus tempore consequatur dolore eos necessitatibus porro, sed, error deserunt. Vitae id vero impedit reiciendis modi unde!"
     },
     {
         "title": "Soluta error animi culpa?",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Molestias ratione molestiae fugit laborum reiciendis, dignissimos voluptatibus asperiores blanditiis debitis quas, numquam nam non repudiandae unde sunt neque ex ipsa modi est corrupti porro. Reprehenderit nisi voluptatem explicabo aliquid!"
     },
     {
         "title": "Impedit repudiandae iste earum!",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Illo veniam, facere doloremque vel voluptatum blanditiis esse maiores eligendi aut ipsum, at consequatur sequi dolore fugiat repudiandae quod est exercitationem ab laboriosam eum distinctio accusantium atque quidem cum. Delectus."
     },
     {
         "title": "Modi voluptatibus quidem facilis!",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Delectus dignissimos error dicta quis numquam, eligendi minima iste maiores hic sit atque quaerat architecto temporibus at minus? Ut molestiae quia illum molestias quaerat nostrum minima vero. Officiis, facere! Blanditiis."
     },
     {
         "title": "Perferendis sint labore incidunt!",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Alias voluptas facilis error cupiditate repellat. Corporis autem repudiandae, est cumque qui impedit ab possimus voluptas a quo, nobis, debitis alias et officia voluptatem ex neque doloremque asperiores quos distinctio!"
     },
     {
         "title": "Modi laborum ab expedita!",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Quisquam consequuntur necessitatibus placeat repellendus ipsa reprehenderit consequatur excepturi tempora rem nostrum ea molestiae tempore corporis deleniti quam, cum perspiciatis eum, optio laboriosam voluptatum fuga aut. Quidem deserunt aperiam libero?"
     },
     {
         "title": "Unde non repudiandae et!",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Consequatur at rem exercitationem esse ex animi vitae et nam laborum laboriosam, aperiam maiores. Odio facilis nam possimus consectetur asperiores cum, aliquid eligendi laborum quis dolores eius, illum pariatur debitis?"
     },
     {
         "title": "Laborum fuga est voluptate?",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Nostrum vel sunt, ex saepe perferendis earum labore, et itaque sed illum velit. Doloribus, debitis, ex officia molestias necessitatibus hic commodi praesentium quibusdam, quisquam ratione porro sit at! Provident, quidem."
     },
     {
         "title": "Illo, aut ad. Deserunt?",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Nobis cupiditate cumque error a id aspernatur asperiores ab architecto deleniti aperiam. Id perferendis dolorem, facere porro aliquam velit quisquam natus eveniet quasi excepturi, dignissimos expedita dicta illum consequuntur ratione."
     },
     {
         "title": "Odit voluptate reprehenderit explicabo.",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Illum minus eum impedit provident facilis soluta, odit quod itaque sint modi mollitia nostrum corporis unde magnam, maxime sunt nobis, doloribus excepturi architecto magni eligendi esse maiores! Adipisci, dolore reiciendis."
     },
     {
         "title": "Voluptate minus iusto molestias?",
+        "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Ab modi blanditiis consectetur eius numquam, aspernatur repellat eaque? Ducimus a repellendus asperiores impedit, explicabo error necessitatibus nesciunt eos sit omnis nemo exercitationem ea! Possimus enim consequuntur aliquid animi cum."
     }
